--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.6.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-player": "^1.6.6",
+    "react-scripts": "2.1.1",
+    "video-react": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
