--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-bootstrap": "^0.32.4",
+    "react-coverflow": "^0.2.17",
     "react-dom": "^16.6.1",
     "react-player": "^1.6.6",
     "react-scripts": "2.1.1",
