--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-coverflow": "^0.2.17",
     "react-dom": "^16.6.1",
     "react-player": "^1.6.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "video-react": "^0.13.1"
   },
